# qualia-common

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md
include/common/: algorithm.hpp  allocator.hpp  array.hpp  bit.hpp  common.hpp  functional.hpp  iterator.hpp  library.hpp  list.hpp  memory.hpp  result.hpp  string.hpp  thread.hpp  tuple.hpp  types.hpp  utility.hpp  variant.hpp  vector.hpp
include/common/unix/: library.hpp  thread.hpp
include/common/win32/: library.hpp  thread.hpp  win32.hpp
tests/: CMakeLists.txt  tests.cpp
